[gd_scene load_steps=5 format=3 uid="uid://lwx6rqx2xr2f"]

[ext_resource type="Texture2D" uid="uid://dhso3vh67k4rn" path="res://assets/frames/hidden_frame_blank.png" id="1_dtpqw"]
[ext_resource type="Texture2D" uid="uid://bhoi50s5pgrbi" path="res://assets/frames/red_frame.png" id="2_4q7u0"]
[ext_resource type="Script" uid="uid://bpchy2ajxgqo" path="res://Scenes/MemoryTile/MemoryTile.gd" id="2_o5k6v"]
[ext_resource type="Texture2D" uid="uid://bhg8000gakpiy" path="res://assets/glitch/dice_12sided.png" id="3_o5k6v"]

[node name="MemoryTile" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_dtpqw")
script = ExtResource("2_o5k6v")

[node name="FrameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4q7u0")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o5k6v")

[connection signal="pressed" from="." to="." method="_on_pressed"]
